3718.	[bug]		A missing ISC_LINK_INIT in log.c. [RT #35260]

	--- 9.9.5 released ---

	--- 9.9.5rc2 released ---

3710.	[bug]		Address double dns_zone_detach when switching to
			using automatic empty zones from regular zones.
			[RT #35177]

3709.	[port]		Use built-in versions of strptime() and timegm()
			on all platforms to avoid portability issues.
			[RT #35183]

3708.	[bug]		Address a portentry locking issue in dispatch.c.
			[RT #35128]

3707.	[bug]		irs_resconf_load now returns ISC_R_FILENOTFOUND
			on a missing resolv.conf file and initializes the
			structure as if it had been configured with:

				nameserver ::1
				nameserver 127.0.0.1

			Note: Callers will need to be updated to treat
			ISC_R_FILENOTFOUND as a qualified success or else
			they will leak memory. The following code fragment
			will work with both old and new versions without
			changing the behaviour of the existing code.

			resconf = NULL;
			result = irs_resconf_load(mctx, "/etc/resolv.conf",
						  &resconf);
			if (result != ISC_SUCCESS) {
				if (resconf != NULL)
					irs_resconf_destroy(&resconf);
				....
			}

			[RT #35194]

3706.	[contrib]	queryperf: Fixed a possible integer overflow when
			printing results. [RT #35182]

3704.	[protocol]	Accept integer timestamps in RRSIG records. [RT #35185]

	--- 9.9.5rc1 released ---

3701.	[func]		named-checkconf can now obscure shared secrets
			when printing by specifying '-x'. [RT #34465]

3699.	[bug]		Improvements to statistics channel XSL stylesheet:
			the stylesheet can now be cached by the browser;
			section headers are omitted from the stats display
			when there is no data in those sections to be
			displayed; counters are now right-justified for
			easier readability. (Only available with
			configure --enable-newstats.) [RT #35117]

3698.	[cleanup]	Replaced all uses of memcpy() with memmove().
			[RT #35120]

3697.	[bug]		Handle "." as a search list element when IDN support
			is enabled. [RT #35133]
